--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,7 +211,12 @@ form ul{
     padding-top: 0;
 }
 
-
+.tdColorG{
+    padding:1em;color: white; background-color:green
+}
+.tdColorR{
+    padding:1em;color: white; background-color:red
+}
 /* Modal */
 
  /* The Modal (background) */
@@ -226,6 +231,7 @@ form ul{
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    color: initial;
   }
   
   /* Modal Content/Box */
