--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,8 +33,6 @@
         </div>
         
         {# MODAL #}
-<!-- Trigger/Open The Modal -->
-
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -56,51 +54,23 @@
 
 </div>
 
-      <script>
-      // Get the modal
-      var modal = document.getElementById('id01');
       
-      // When the user clicks anywhere outside of the modal, close it
-      window.onclick = function(event) {
-        if (event.target == modal) {
-          modal.style.display = "none";
-        }
-      }
-      </script>
       
 
-        {% block javascripts %}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+{% block javascripts %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-        {# Modal #}
-        <script>
-            // Get the modal
-            var modal = document.getElementById("myModal");
+  <script>
+    
+    // When the user clicks anywhere outside of the modal, close it
+    $(".myBtn").on("click", function(event) {
+        $('#myModal').toggle()
+      
+    })
+  </script>
+  {# Modal #}
 
-            // Get the button that opens the modal
-            var btn = document.getElementById("myBtn");
-
-            // Get the <span> element that closes the modal
-            var span = document.getElementsByClassName("close")[0];
-
-            // When the user clicks the button, open the modal 
-            btn.onclick = function() {
-            modal.style.display = "block";
-            }
-
-            // When the user clicks on <span> (x), close the modal
-            span.onclick = function() {
-            modal.style.display = "none";
-            }
-
-            // When the user clicks anywhere outside of the modal, close it
-            window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-                }
-            }
-        </script>
-        {% endblock %}
+{% endblock %}
     </body>
 
 </html>
