add Geo dans stagiaire form

--- a/templates/stagiaire/stagiaireForm.html.twig
+++ b/templates/stagiaire/stagiaireForm.html.twig
@@ -26,7 +26,64 @@
     
 <div class="boiteform">
     {{ form(stagiaire_form) }}
+    <div id="error-message"></div>
 </div>
 
 </div>
+{% endblock %}
+
+{% block javascripts %}
+
+{{ parent() }}
+
+<script>
+$(document).ready(function(){
+
+
+    let apiUrl = "https://geo.api.gouv.fr/communes?codePostal="
+    let format = "&format=json"
+
+    let zipcode = $("#stagiaire_form_codepostal")
+    let city = $("#stagiaire_form_ville")
+    let errorMessage = $("#error-message")
+
+
+    // On écoute la valeur de ce qui es écrit
+    $(zipcode).on('blur', function(){
+
+        let code = $(this).val()
+    //    console.log(code)
+
+        let url = apiUrl+code+format
+    //    console.log(url)
+
+        fetch(url, {method:'get'}).then(response => response.json())
+        .then(results => {
+            $(city).find('option').remove()
+            if(results.length){
+                $(errorMessage).text('').hide()
+                $.each(results, function(key, value){
+                    // console.log(value)
+                    // console.warn(value.nom)
+                    $(city).append('<option value="'+value.nom+'">'+value.nom+'</option>')
+
+                })
+            }
+            else{
+                if($(zipcode).val()){
+                    console.log('Erreur de code postal')
+                    $(errorMessage).text('Aucune commune avec ce code postal.').show()
+                }
+                else{
+                    $(errorMessage).text('').hide()
+                }
+            }
+        }).catch(err => {
+        console.log(err)
+        })
+
+    })
+})
+
+</script>
 {% endblock %}
