--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,19 @@
         <div class="main">
             <header>
                 <nav>
+                  <div>
                     <a class="accueil" href="{{ path('home_index') }}">Accueil</a>
+                  </div>
+                  <div>
+                    {% if app.user %}
+                    <a href="{{ path('app_logout') }}">Déconnexion</a>
+                    {% else %}
+                    <a href="{{ path('app_login') }}">Se connecter</a>
+                    <a href="{{ path('app_register') }}">S'inscrire</a>
+                    {% endif %}
+                  </div>
+
+                    
                 </nav>
             </header>
             <section>
@@ -66,6 +78,21 @@
     $(".myBtn").on("click", function(event) {
         $('#myModal').toggle()
       
+    })
+
+  // When the user clicks on <span> (x), close the modal
+    $(".close").on('click', function() {
+      $('#myModal').hide()
+    })
+    
+    // When the user clicks anywhere outside of the modal, close it
+    $(window).on('click', function(event) {
+      console.log($(event.target))
+      if ( $(event.target) == $('.modal')) {
+        $('#myModal').hide()
+        
+        console.log('click')
+      }
     })
   </script>
   {# Modal #}
